<!--
  ~ NewsHacker - strings.xml
  ~ Last Modified: 1/18/16 4:59 PM
  ~
  ~ Copyright (c) 2016 Trevor Summerfield
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this
  ~ software and associated documentation files (the "Software"), to deal in the
  ~ Software without restriction, including without limitation the rights to use, copy,
  ~ modify, merge, publish, distribute, sublicense, and/or sell copies of the Software,
  ~ and to permit persons to whom the Software is furnished to do so, subject to the
  ~ following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or
  ~ substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
  ~ THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR
  ~ OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
  ~ ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
  ~ OTHER DEALINGS IN THE SOFTWARE.
  -->

<resources>

    <string name="app_name">NewsHacker</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <string name="main_drawer_top_stories">Top Stories</string>
    <string name="main_drawer_top_stories_condensed">Top</string>
    <string name="main_drawer_new_stories">New Stories</string>
    <string name="main_drawer_new_stories_condensed">New</string>
    <string name="main_drawer_show_stories">Show Stories</string>
    <string name="main_drawer_show_stories_condensed">Show</string>
    <string name="main_drawer_ask_stories">Ask Stories</string>
    <string name="main_drawer_ask_stories_condensed">Ask</string>
    <string name="main_drawer_job_stories">Job Stories</string>
    <string name="main_drawer_job_stories_condensed">Job</string>

</resources>
